# OrganicMeshToolkitX

./: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  setup_commit000003.ps1  setup_commit000004.ps1  setup_commit000005.ps1  setup_commit000006.ps1  setup_geometry_core.ps1  setup_omtx_quality.ps1
.github/workflows/: python.yml
src/OrganicMeshToolkitX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/omtx/: __init__.py
src/omtx/Math/: __init__.py  vector3.py
src/omtx/geometry/: __init__.py  edge.py  face.py  halfedge.py  halfedge_face.py  halfedge_mesh.py  halfedge_vertex.py  mesh.py  vertex.py
src/omtx/math/: bounding_box.py  line_segment.py  plane.py  ray.py
src/omtx/mesh/: __init__.py  analyzer.py
src/omtx/spatial/: __init__.py  kdtree.py
tests/: test_geometry_core.py  test_halfedge.py  test_import.py  test_kdtree.py  test_math_primitives.py  test_vector3.py
tests/mesh/: test_analyzer.py
tools/: lint.ps1
