[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "OrganicMeshToolkitX"
version = "0.0.1a1"
description = "Organic Mesh Toolkit X"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff==0.15.17",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]